--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Website Blueprint Generator</title>
+    <title>akSquareSol</title>
     <meta name="description" content="A modern portfolio website template for developers and tech professionals" />
     <meta name="author" content="Lovable" />
 
