--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
     <meta name="description" content="A modern portfolio website template for developers and tech professionals" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="Portfolio Website Blueprint Generator" />
-    <meta property="og:description" content="A modern portfolio website template for developers and tech professionals" />
+    <meta property="og:title" content="akSqaureSol" />
+    <meta property="og:description" content="Turning concepts into reality with pixel-perfect web and mobile solutions." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="" />
   </head>
 
   <body>
